--- a/html1/HTML_1_i_iframe.html
+++ b/html1/HTML_1_i_iframe.html
@@ -19,7 +19,7 @@
 			<!--상대경로 : 얘가 찾아지는 이유는 파일이 둘다 같은 위치에 있기 때문이다.-->
 			<!--절대경로는 잘 안쓴다. 이유는 나중에. D:\A_TeachingMaterial\5.JQuery\html\HTML_1_5_img_ex1.html"-->
 			<!--name설정하면 a태그에서 타겟 줄수있다. 그럼 하이퍼링크가 iframe에서 새창으로 열린다."-->
-			
+			<!-- 웹접근성때문에 auto 재생은 하지마라. -->
 			</iframe>
 			</p>
 
