--- a/html2/HTML_2_B_cssLink.html
+++ b/html2/HTML_2_B_cssLink.html
@@ -3,27 +3,29 @@
 	<head>
 		<link type="text/css" rel="stylesheet" href="css_2_1_test.css">
 		<!-- 이런애들을 외부 스타일 시트라고 한다. 이건 외부 css다.-->
-	<style><!--내부 CSS라고 한다.-->
+	<style>
+	
 		p{
 			color: blue;
 		}
 	
 	</style>
-	
+	<!--얘를 내부 CSS라고 한다.-->
 	</head>
-	<style>
+		<style>
 		h1{
 			color:green;
 		}
-	<style>
+	</style>
+		
 		<h1 style="color:yellow">안녕하세요</h1>
-		<!--이렇게 라인별 스타일은 inline CSS라고 한다.
-		적용 우선순위 : inlinecss > 내부css > 외부css
-		그러나 스타일시트는 가장 마지막에 적용시킨애가 적용된다.(덧칠), -->
-	<p>f12-> f2 개발자도구에서 화살표 코드 삭제 추가, 편집 가능 
-	<br>(서버에 있는거기때문에 내 브라우저에서 바꾸고 공부할 수 있는 정도 밖에 없다.
-	<br>스타일셋을 지우니까 분석하기 좋더라.	
-	<br>ex) font html이랑 css랑 폰트가 서로 다르다. 누가 우선인가? html.
+<p>		이렇게 라인별 스타일은 inline CSS라고 한다. 
+ 		적용 우선순위 : inlinecss > 내부css > 외부css 
+ 		그러나 스타일시트는 가장 마지막에 적용시킨애가 적용된다.(덧칠),  
+		f12-> f2 개발자도구에서 화살표 코드 삭제 추가, 편집 가능  
+<br>(서버에 있는거기때문에 내 브라우저에서 바꾸고 공부할 수 있는 정도 밖에 없다. 
+<br>스타일셋을 지우니까 분석하기 좋더라.	 
+<br>ex) font html이랑 css랑 폰트가 서로 다르다. 누가 우선인가? html. 
 
  </p>
 	<body>
