--- a/html2/HW5_SEMANTIC.html
+++ b/html2/HW5_SEMANTIC.html
@@ -8,28 +8,28 @@
 				border:5px solid blue;
 			}
 			header{
-				width: 99%;
-				height: 100px;
-				text-align: center;
 				background-color: #F9F907;
 				border-radius: 25px;
+				width: 100%;
+				height: 100px;
+				text-align: center;
 				margin-bottom:0.5em;
 				
 			}
 			nav{
-				width: 29%;
+				width: 28%;
 				height:450px;
 				float:left;
-				margin-left:0.5em;
-				margin-bottom:0.5em;
+				margin:3px;
 				background-color: #FFC0CB;
 				border-radius: 25px;
+				position:relative;
 			}
 			#nav{
-				width:95%;
+				width: 97;
 				height:400px;
 				text-align: center;
-
+				position:absolute;
 			}
 			ul{
 				text-align: left;
@@ -40,20 +40,32 @@
 /* 			margin을 이용해야 한다. 기본가로크기가 100%이기 때문에 지정해 줘야 된다.
 			요소내용에 맞게 자동으로 크기가 정해지게 하고 싶으면 display속성을 이용한다. */			
 			#main{
-				width: 69%;
+				width: calc(70% - 12px);
 				height:450px;
 				float:right;
-				margin-right:0.5em;
-				margin-bottom:0.5em;
+				margin:3px;
 				background-color: #98E1E1;
 				border-radius: 25px;
+				position:relative;
 			}
 			#smain{
-				width:90%;
+				width: calc(99% - 12px);
 				height:400px;
 				word-break:break-all;
-				padding: 30px;			
+				position:absolute;		
+				width:90%;
+				overflow: auto;
 
+			}
+			.maind {
+				border:2px dotted green;
+				border-radius: 25px;	
+				background-color: #9DD3BF;
+				margin:2.5px 5px;
+				position:relateive;
+				width:90%;
+				overflow: auto;
+				
 			}
 			footer{
 				clear:both;
@@ -74,17 +86,12 @@
 			color:yellow;
 			}
 			img{
-				width:220px;
-				height:160px;
+				position:absolute;
+				width:50%;
 			}
 			h3, p{
 				padding:5px;
-			}
-			.maind {
-				border:2px dotted green;
-				border-radius: 25px;	
-				background-color: #9DD3BF;
-				padding:5px;
+								overflow: auto;
 			}
 			.y{
 				color:yellow;
@@ -114,16 +121,17 @@
 		</nav>
 		<section id="main">
 			<div id="smain">
-			<div class="maind">
-		 	<h3>Semantic Tags</h3>
-			<p>시멘틱(Semantic elements) 요소들은 브라우저에게 요소의 의미나 목적을 명확하게 알려주는 요소이다. 레이아웃을 만들때 쓰는 것. 의미가 있는 요소라면 div보다는 시멘틱 태그를 사용해준다.
-			</div>
-			<br>
-			<div class="maind">
-		 	<h3>div와 span</h3>
-			<p>div는 "divide"의 약자로서 페이지를 논리적인 섹션으로 분리하는데 사용되는 태그이다. span요소는 인라인 요소로서 텍스트를 위한 컨테이너로 사용할 수 있다. 
-			</p>
-			</div>
+				<div class="maind">
+				 	<h3>Semantic Tags</h3>
+					<p>시멘틱(Semantic elements) 요소들은 브라우저에게 요소의 의미나 목적을 명확하게 알려주는 요소이다. 레이아웃을 만들때 쓰는 것. 의미가 있는 요소라면 div보다는 시멘틱 태그를 사용해준다.
+					</p>
+				</div>
+				<br>
+				<div class="maind">
+				 	<h3>div와 span</h3>
+					<p>div는 "divide"의 약자로서 페이지를 논리적인 섹션으로 분리하는데 사용되는 태그이다. span요소는 인라인 요소로서 텍스트를 위한 컨테이너로 사용할 수 있다. 
+					</p>
+				</div>
 			</div>
 			</section>
 		<footer>
