--- a/html2/HW8_RPS.html
+++ b/html2/HW8_RPS.html
@@ -30,18 +30,18 @@ l,k..,lk,.l<!DOCTYPE html>
 		b = "바위";
 	} 
 	if(a===R && b===S){ 
-		res = "첫번째 사람이 이겼습니다.";
+		res = "당신이 이겼습니다.";
 		a = "바위";
 		b = "가위";
 	} 
 	if(a===R && b===P){ 
-		res = "두번째 사람이 이겼습니다.";
+		res = "컴퓨터가 이겼습니다.";
 		a = "바위";
 		b = "보";
 	} 
 	//a S
 	if(a===S && b===R){ 
-		res = "두번째 사람이 이겼습니다.";
+		res = "컴퓨터가 이겼습니다.";
 		a = "가위";
 		b = "바위";
 	} 
@@ -52,18 +52,18 @@ l,k..,lk,.l<!DOCTYPE html>
 
 	} 
 	if(a===S && b===P){ 
-		res = "첫번째 사람이 이겼습니다.";
+		res = "당신이 이겼습니다.";
 		a = "가위";
 		b = "보";
 	} 
 	//a P
 	if(a===P && b===R){ 
-		res = "첫번째 사람이 이겼습니다.";
+		res = "당신이 이겼습니다.";
 		a = "보";
 		b = "바위";
 	} 
 	if(a===P && b===S){ 
-		res = "두번째 사람이 이겼습니다.";
+		res = "컴퓨터가 이겼습니다.";
 		a = "보";
 		b = "가위";
 	} 
