--- a/html3/HW_1_RANDOM.html
+++ b/html3/HW_1_RANDOM.html
@@ -8,7 +8,18 @@
 		border:1px solid blue;
 	}
 </style>
-	<script>
+</head>
+<body>
+	<h1>출력위치</h1>
+	<button type="button" id="b" onclick="ran()">한자리 랜덤 계산</button>
+
+	<form>
+	<p>
+ 	<textarea id="ran" rows="50", cols="50">
+ 	</textarea>
+ 	</p>
+ 	</form>
+ 		<script>
 		/* 	cf.Math.random() :0~0.9
 		 	parseInt(Math.random()*100);
 				*10 : 0~9.99
@@ -22,24 +33,15 @@
 				*/
 	 function ran() {
 		var random = new Array();
-		alert(random);
 		for(var i=0; i<5; i++){
-			random.push = Math.floor(Math.random()*10)+1;
+			random[i] = parseInt(Math.random()*10+1);
 			}
-		alert(random);
 		document.getElementById("ran").innerHTML = random;
-		alert(random);
 	}
 			
+			//이거 random[i].push 왜 안돼?
+			//중복제거도 안됐다.
+			//아래로 글씨가 쌓이는게 안되는 이유?
 	 </script>
-</head>
-<body>
-	<h1>출력위치</h1>
-	<button type="button" id="b" onclick="ran()">한자리 랜덤 계산</button>
-
-	 <div>
- 	<form id="ran">
- 	</form>
- 	</div>
 </body>
 </html>
