--- a/html3/HTML_3_G_math-ex1.html
+++ b/html3/HTML_3_G_math-ex1.html
@@ -10,6 +10,9 @@
 	<script>
 //가위 바위 보 게임을 할 수 있는 프로그램을 작성하시오. 컴퓨터 = 랜덤, 사용자 prompt	
 //	var arr = ["가위","바위","보"];
+//if, elseif로 바꿔라.
+
+
 	var S = "가위";
 	var R = "바위";
 	var P = "보";
@@ -86,6 +89,25 @@
 			+ "컴퓨터가 "+ b + "를 내어 "
 			+ "결과는 " + res);
 	//이게 최선이었을까. 메서드 마렵다.
+	/* var val = document.getElementById("user").value;
+    	var arr = ["가위","바위","보"];
+        var randomNo = Math.floor(Math.random() * 3 + 1);//1~100
+    	
+    	if(val == arr[randomNo-1]){//비겼을 때
+    		alert("정답입니다.");
+    	} else if(val == "가위" && arr[randomNo-1] == "바위" ||
+    		   	val == "바위" && arr[randomNo-1] == "보" ||
+    		   	val == "보" && arr[randomNo-1] == "가위"
+    		   ){
+    		alert("나 : " + val + " 컴퓨터 : " + arr[randomNo-1] + " 졌어요");
+    	} else if(val == "가위" && arr[randomNo-1] == "보" ||
+                val == "바위" && arr[randomNo-1] == "가위" ||
+                val == "보" && arr[randomNo-1] == "바위"
+               ){
+    		alert("나 : " + val + " 컴퓨터 : " + arr[randomNo-1] + " 이겼어요");
+    	}else{
+    		alert("비교불가!!! 입력값 : " + val);
+    	} */
 	</script>
 </body>
 </html>
