--- a/html1/HTML_1_l_input.html
+++ b/html1/HTML_1_l_input.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 <!--checkbox관련 내용 ppt참고 복습할것-->
+<script type="text/javascript">
+	input {
+		size:10;
+	}
+
+</script>
 </head>
 <body>
 	<form>
