--- a/html3/HTML_3_H_Bom-window.html
+++ b/html3/HTML_3_H_Bom-window.html
@@ -5,7 +5,22 @@
 <title>BOM(browser object model)</title>
 <style>
 </style>
-<script type="text/javascript" src="../../js/html3/html_3_h_dom&bom.js"></script>
+<script type="text/javascript" src="../../js/html3/html_3_h_dom&bom.js">
+//cf.bom & dom
+/* 	bom - window
+			- navigator
+			- location
+			- history
+			- screen
+			- documnet
+		//js로 src참조인 경우 개발자 도구에서 source탭에서 tree찾으면 나온다.
+		//pdf 참조 요망. 개발자도구 console창
+		//	location.assign("http://google.com")
+		//	location.replace("www.google.com")
+		//	dom - 문서객체모델.(document object model) tree구조로 표현.	
+			*/
+
+</script>
 </head>
 <body>
 	<h3>open,close</h3>
