--- a/html3/HTML_3_G_math-ex2.html
+++ b/html3/HTML_3_G_math-ex2.html
@@ -7,24 +7,27 @@
 </style>
 </head>
 <body>
+	<h3>당신은 복권에 당첨되지 않았습니다. 복권을 산 적이 없잖아요.</h3>
+	<h4>그래도 사고싶다면 아래 참조.</h4>
+	<textarea id="buyIt"></textarea>
 	<script>
 		//로또 번호를 생성하는 프로그램을 작성하시오. (1~45 중 6개 추첨)
-		
-		const lotto = [];
-		for(var i=1; i<46; i++){
-			lotto[i-1]= i;
-		}
-		alert(lotto);
-		const lottoPick =new Set(lotto);		
-		for(var i=0; i<6; i++){
-			Math.random()*
-		}
-		const lottoReal =[...Set];
-		
-		alert(lottoReal);
+				
+		var lotto =[];
+		while(true){
+				var ran = parseInt(Math.random()*45+1);
+				var	idx = lotto.indexOf(ran);
 
-		
-		
+				if(idx == -1){
+					lotto.push(ran);
+					if(lotto.length == 6)
+						break;
+				}else{
+					continue;
+				}
+				
+			}
+		document.getElementById("buyIt").innerHTML = lotto;
 	</script>
 </body>
 </html>
