--- a/html3/HW_2_JUMIN.html
+++ b/html3/HW_2_JUMIN.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h3>주민등록번호 유효성 검사</h3>
-	주민등록번호 : <input type="text" id="jumin2">
+	주민등록번호 : <input type="text" id="jumin">
 	<button type="button" onclick="proc2()">확인</button>
 	<script>
 	//1.마지막자리 빼고 총합
@@ -17,22 +17,49 @@
 	//4.0~9이면 그대로, 10이면 0, 11이면 1로 변환
 	//4번 결과와 M자리 값이 맞으면 맞음.
 	function proc2() {
-		var val = documnet.getElementById("jumin").value
-		var arr = val.split("-");
-		alert(arr);
-		var A = val.substr(0,1)*2;
-		var B = val.substr(1,1)*3;
-		var C = val.substr(2,1)*4;
-		var D = val.substr(3,1)*5;
-		var E = val.substr(4,1)*6;
-		var F = val.substr(5,1)*7;
-		
-		var G = val.substr(5,1)*8;
-		var H = val.substr(6,1)*9;
-		var I = val.substr(7,1)*2;
-		var J = val.substr(8,1)*3;
-		var K = val.substr(9,1)*4;
-		var L = val.substr(10,1)*5;
+		var val = document.getElementById("jumin").value
+
+		var arr = val.split("-"); // 스플릿을 했는데 왜 length가 1인가?
+
+		alert(arr[0].length + "   " + arr[1].length);
+		var str = arr[0]+ "" + arr[1];
+
+ 		if(str.length != 13){ //str의 자리수를 어떻게 체크하는가? 물어볼것. 
+			alert("잘못된 주민번호입니다. 주민번호 13자릴 입력해주세요.")
+		} 
+		var A = parseInt(str.substr(0,1))*2;
+		var B = parseInt(str.substr(1,1))*3;
+		var C = parseInt(str.substr(2,1))*4;
+		var D = parseInt(str.substr(3,1))*5;
+		var E = parseInt(str.substr(4,1))*6;
+		var F = parseInt(str.substr(5,1))*7;
+
+		var G = parseInt(str.substr(6,1))*8;
+		var H = parseInt(str.substr(7,1))*9;
+		var I = parseInt(str.substr(8,1))*2;
+		var J = parseInt(str.substr(9,1))*3;
+		var K = parseInt(str.substr(10,1))*4;
+		var L = parseInt(str.substr(11,1))*5;
+		var M = parseInt(str.substr(12,1));
+
+		var no1 = (A+B+C+D+E+F+G+H+I+J+K+L);
+		var no2 = no1%11;
+		var no3 = 11 - no2;
+		var no4 = no3;
+
+		if(no3 > 0 && no3 <= 9){
+			no4 = no3;
+		}else if(no3 == 10){
+			no4 = 0;
+		}else if(no3 == 11){
+			no4 = 1;
+		}
+		var no5 = no4;
+		if(M == no4){
+			alert("축 ㅋ 하 ㅋ 주민번호가 유효데스네.")
+		}else{
+			alert("유효하지 않은 주민번호입니다.")
+		}
 		
 	}
 	</script>
