--- a/html3/HW_7_TimesTableSelect.html
+++ b/html3/HW_7_TimesTableSelect.html
@@ -6,7 +6,7 @@
 <script type="text/javascript">
 	function calc() {
 		var sel = document.getElementById("mtt");
-		var no = sel[sel.selectedIndex].value;
+		var no = sel.value;
 		var str=""; 
 		
 		for(var i = 1; i<10; i++){
