--- a/html4/A_drag&drop.html
+++ b/html4/A_drag&drop.html
@@ -5,28 +5,30 @@
 <title>Insert title here</title>
 	<style type="text/css">
 		div{
-		width : 200px;
-		height : 200px;
-		border :1px solid red;
+			width : 200px;
+			height : 200px;
+			border :1px solid red;
 		}
 			
 	</style>
 	<script type="text/javascript">
 		function drag(ev) {
-			ev.preventDefault();
-			console.log(ev);//개발자 콘솔찍은걸로 확인해보자
-			console.log(ev.target);
+//			console.log(ev);//개발자 콘솔찍은걸로 확인해보자
+//			console.log(ev.target);
 			ev.dataTransfer.setData("txet", ev.target.id); 
 		}
 		
 		function drop(ev) {
-			console.log("drop tar" + ev.target);
+			ev.preventDefault();
+//			console.log("drop target : " + ev.target);
 			var data = ev.dataTransfer.getData("text")
-			console.log("getda" + data);	
+//			console.log("data : " + data);	
+			ev.target.appendChild(document.getElementById(data));
 		}
 		
 		function allowDrop(ev) {
-			ev.preventDefault();			
+			ev.preventDefault();	//드랍을 허용하도록 함
+			//기본 동작을 막는 함수(작성코드와 충돌을 피하기 위해)
 		}
 		
 		
